# MEP-Predict-2D

./: README.md  main.py  pyproject.toml  utils.py
data/Efields/: Aoki_1108_65_100_0000_120.npy  Aoki_1108_65_100_0000_135.npy  Aoki_1108_65_100_0000_150.npy  Aoki_1108_65_100_0001_120.npy  Aoki_1108_65_100_0001_135.npy  Aoki_1108_65_100_0001_150.npy  Aoki_1108_65_100_0002_120.npy  Aoki_1108_65_100_0002_135.npy  Aoki_1108_65_100_0002_150.npy  Aoki_1108_65_100_0003_120.npy  Aoki_1108_65_100_0003_135.npy  Aoki_1108_65_100_0003_150.npy  Aoki_1108_65_100_0004_120.npy  Aoki_1108_65_100_0004_135.npy  Aoki_1108_65_100_0004_150.npy  Aoki_1108_65_100_0100_120.npy  Aoki_1108_65_100_0100_135.npy  Aoki_1108_65_100_0100_150.npy  Aoki_1108_65_100_0101_120.npy  Aoki_1108_65_100_0101_135.npy  Aoki_1108_65_100_0101_150.npy  Aoki_1108_65_100_0102_120.npy  Aoki_1108_65_100_0102_135.npy  Aoki_1108_65_100_0102_150.npy  Aoki_1108_65_100_0103_120.npy  Aoki_1108_65_100_0103_135.npy  Aoki_1108_65_100_0103_150.npy  Aoki_1108_65_100_0104_120.npy  Aoki_1108_65_100_0104_135.npy  Aoki_1108_65_100_0104_150.npy  Aoki_1108_65_100_0200_120.npy  Aoki_1108_65_100_0200_135.npy  Aoki_1108_65_100_0200_150.npy  Aoki_1108_65_100_0201_120.npy  Aoki_1108_65_100_0201_135.npy  Aoki_1108_65_100_0201_150.npy  (+1522 more)
graph/: result_heatmap.ipynb  test.ipynb
helpers/: delete_file.py  validate.py
libs/: dataset.py  logger.py  model.py  seed.py  trainer.py
main/: README.md
sh/: run_python_binary_random.sh  run_python_binary_separated.sh  run_python_binary_test.sh  run_python_regression_separated.sh  run_python_test.sh
(+1704 files in other folders)
